@@ -1,0 +1,1 @@
+declare f as external "C" linkage function returning void
