@@ -1,0 +1,1 @@
+cdecl @ @ -xc++ @ explain extern R"(C)" void f() @ 0
