@@ -1,0 +1,1 @@
+cdecl @ @ -xc++ @ explain extern R"abc(C)abc" void f() @ 0
